version 0.70.02
	Better handling of jpeg quality

version 0.70.01 ( 2011-01-19 )
	File format support for commandline interface (--file_format)
	GUI bugfix
	Deleted useless current_zoom field
	More commandline status info

version 0.70.00 ( 2011-01-17)
	Initial release

