@@ -1,5 +1,6 @@
 version 0.70.02
 	Better handling of jpeg quality
+	Added hex info to commandline interface (--status_hex)
 
 version 0.70.01 ( 2011-01-19 )
 	File format support for commandline interface (--file_format)
